completed choiceTwo, but need to fix choiceOne bc it's overwriting the text list